# wsproxy

./: .dockerignore  .gitignore  Api.hs  App.hs  Client.hs  Dockerfile  Main.hs  Makefile  Procfile  README.md  State.hs  Websocket.hs  app.json  cabal.config  fig.yml  wed-is-socket.cabal  wsproxy.cabal
WSProxy/: Client.hs  Main.hs  Messenger.hs  State.hs  Types.hs  Util.hs  Websocket.hs
src-executable/: Main.hs
src/WSProxy/: Client.hs  Main.hs  Messenger.hs  Types.hs
