name:                wsproxy
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Nathan Kot
maintainer:          me@nathankot.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable wsproxy
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8,
                       scotty,
                       websockets,
                       http-types,
                       text,
                       transformers,
                       bytestring
  -- hs-source-dirs:
  default-language:    Haskell2010
