name:                wsproxy
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Nathan Kot
maintainer:          me@nathankot.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs: src
  default-language:    Haskell2010
  exposed-modules:     WSProxy.Main,
                       WSProxy.Messenger,
                       WSProxy.Client,
                       WSProxy.Types
  build-depends:       base >=4.7 && <4.8,
                       scotty,
                       websockets,
                       http-types,
                       text,
                       transformers,
                       bytestring

executable wsproxy
  main-is:             Main.hs
  build-depends:       base, wsproxy
  default-language:    Haskell2010
  ghc-options:         -threaded +RTS

test-suite tests
  hs-source-dirs:      test
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base,
                       wsproxy,
                       hspec
