name:                wsproxy
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Nathan Kot
maintainer:          me@nathankot.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     WSProxy.Main,
                       WSProxy.Messenger,
                       WSProxy.Client,
                       WSProxy.Types
  build-depends:       base >=4.7 && <4.8,
                       scotty >=0.9.0 && <0.10.0,
                       network,
                       websockets,
                       http-conduit,
                       http-types,
                       text,
                       transformers,
                       bytestring,
                       warp,
                       wai,
                       wai-extra,
                       wai-websockets

executable wsproxy
  hs-source-dirs:      src-executable
  main-is:             Main.hs
  build-depends:       base, wsproxy
  default-language:    Haskell2010
  ghc-options:         -threaded +RTS
